ingress.yml
#
# Ingress
#


apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: default-http-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  namespace: nginx-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      containers:
      - name: default-http-backend
          image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fm
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.org/websocket-services: "websocket"
spec:
  tls:
  - hosts:
    - thisissoon.fm
    - api.thisissoon.fm
    - relay.thisissoon.fm
    - ws.thisissoon.fm
    secretName: fm-tls
  backend:
    serviceName: web
    servicePort: 80
  rules:
    # Web Application
    - host: thisissoon.fm
      http:
        paths:
        - backend:
            serviceName: web
            servicePort: 80
    # API Service
    - host: api.thisissoon.fm
      http:
        paths:
        - backend:
            serviceName: api
            servicePort: 80
    # Event Relay
    - host: relay.thisissoon.fm
      http:
        paths:
        - backend:
            serviceName: eventrelay
            servicePort: 80
    # Web Socket Service
    - host: ws.thisissoon.fm
      http:
        paths:
        - backend:
            serviceName: websocket
            servicePort: 80
